[package]
name = "protobuf-conversion"
version = "0.1.0"
authors = ["Andrew Guerrero <ajguerrer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html   

[dependencies]
thiserror = "1"

[dev-dependencies]
criterion  = "0.3"


[[bench]]
name = "heavy"
harness = false

[[bench]]
name = "light"
harness = false
